--- a/force-app/main/default/classes/LeaveRequestApexController.cls
+++ b/force-app/main/default/classes/LeaveRequestApexController.cls
@@ -45,7 +45,7 @@ public without sharing class LeaveRequestApexController {
         Integer count2 = 0;
         Integer count3 = 0;
          for (EMS_LM_Leave_History__c emsLmLeave : [SELECT Id,
-                                                            EMS_LM_Contact__r.LastName,
+                                                            EMS_LM_Contact__r.Name,
                                                             EMS_LM_Reason__c,
                                                             EMS_LM_Leave_Start_Date__c,
                                                             EMS_LM_Leave_End_Date__c,
@@ -63,16 +63,16 @@ public without sharing class LeaveRequestApexController {
                                                    AND EMS_LM_Status__c !=: LeaveRequestConstant.CANCELLED
                                                    ORDER BY CreatedDate ASC]){
                                                        System.debug('### emsLmLeave ' + emsLmLeave);
-           if (LeaveRequestConstant.LOGGEDIN_USERID == emsLmLeave.EMS_LM_Approver__c && (emsLmLeave.EMS_LM_Status__c == LeaveRequestConstant.APPROVER_2_WAITING || emsLmLeave.EMS_LM_Status__c == LeaveRequestConstant.PENDING) && count1 < 10 ){
+           if (LeaveRequestConstant.LOGGEDIN_USERID == emsLmLeave.EMS_LM_Approver__c && (emsLmLeave.EMS_LM_Status__c == LeaveRequestConstant.APPROVER_2_WAITING || emsLmLeave.EMS_LM_Status__c == LeaveRequestConstant.PENDING) && count1 < 5 ){
                	leaveRequestPendingList.add(emsLmLeave); //Approver 1
                 count1++;
                 System.debug('### leaveRequestPendingList 1' + leaveRequestPendingList);
            }
-           if (LeaveRequestConstant.LOGGEDIN_USERID == emsLmLeave.EMS_LM_2nd_Approver__c && (emsLmLeave.EMS_LM_Status__c == LeaveRequestConstant.APPROVER_3_WAITING || emsLmLeave.EMS_LM_Status__c == LeaveRequestConstant.PENDING) && count2 < 10) {
+           if (LeaveRequestConstant.LOGGEDIN_USERID == emsLmLeave.EMS_LM_2nd_Approver__c && (emsLmLeave.EMS_LM_Status__c == LeaveRequestConstant.APPROVER_3_WAITING || emsLmLeave.EMS_LM_Status__c == LeaveRequestConstant.PENDING) && count2 < 5) {
                	leaveRequestApprover2List.add(emsLmLeave); //Approver 2
                 count2++;
            }
-           if (LeaveRequestConstant.LOGGEDIN_USERID == emsLmLeave.Approver_3__c && emsLmLeave.EMS_LM_Status__c == LeaveRequestConstant.APPROVER_3_WAITING && count1 < 10) {
+           if (LeaveRequestConstant.LOGGEDIN_USERID == emsLmLeave.Approver_3__c && emsLmLeave.EMS_LM_Status__c == LeaveRequestConstant.APPROVER_3_WAITING && count1 < 5) {
                	leaveRequestApprover3List.add(emsLmLeave); //Approver 3
                 count3++;
            }
